# Cache-Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: cache.hpp  cache_line.hpp  cache_set.hpp  config.hpp  replacement_policy.hpp  simulator.hpp  stats.hpp  trace_reader.hpp  utils.hpp
include/policies/: fifo.hpp  lru.hpp
src/: cache.cpp  cache_set.cpp  main.cpp  simulator.cpp  stats.cpp  trace_reader.cpp
src/policies/: fifo.cpp  lru.cpp
